<resources>
    <string name="app_name">SiFood</string>
    <string name="title_home">Home</string>
    <string name="siFood">SiFood</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_article">Article</string>

    <!-- Night Mode Preferences -->
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_auto" translatable="false">auto</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>

    <!--    Detail Food-->
    <string name="sample">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of de Finibus Bonorum et Malorum (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, Lorem ipsum dolor sit amet.., comes from a line in section 1.10.32.</string>
    <string name="picture">picture</string>
    <string name="view_on_google_maps">View on Google Maps</string>
    <string name="makanan_terpopuler">Makanan Terpopuler</string>
    <string name="makanan_tradisional_yang_sudah_terkenal">Makanan Tradisional yang sudah terkenal</string>
    <string name="makanan_yang_berasal_ndari_daerahmu">Makanan yang berasal \ndari daerahmu</string>
    <string name="makanan_tradisional_yang_berasal_dari_daerahmu">Makanan tradisional yang berasal dari daerahmu</string>
    <string name="action_settings">Setting</string>
    <string name="carousel">Carousel</string>

    <!-- Location -->
    <string name="GoInter">Makanan tradisional Indonesia Go Internasional</string>
    <string name="Daerah">Makanan tradisional Indonesia di daerah </string>
    <string name="lihat_semua"><![CDATA[Lihat Semua >]]></string>
    <string name="nointernet">noInternet</string>
    <string name="tidak_ada_koneksi_internet">Tidak ada koneksi Internet :(</string>
    <string name="coba_lagi">Coba Lagi</string>
    <string name="kosong">kosong</string>
    <string name="logout">Logout</string>
    <string name="belum_ada_makanan_nfavoritmu">Belum ada Makanan\nFavoritmu</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="alert">Alert</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="login">Login</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="sign_up">Sign Up</string>

</resources>